import java.util.List;

public abstract class ARoom {

    protected String story;
    protected List<InteractiveObject> interactiveObjects;
}
