import java.util.List;

public class Game {
    protected List <Room> rooms;
    protected Player player;
    TextUI textUI;

    void setup(){

    }

    void startMenu(){

    }

    void runGameLoop(){

    }
}
