public class InteractiveObject {

    private String type;
    private String name;


}
