public interface Room {
    public void enter();
    public void exit();
}
