public class StartRoom extends ARoom {
    private boolean candleLit = false;
    private boolean bookshelfPuzzleSolved = false;
    private boolean paintingPuzzleSolved = false;

    public void enter() {

    }

    public void runRoomLoop() {

    }

    private void startBookshelfPuzzle() {

    }

    private void startPaintingPuzzle() {

    }
    private void exit() {

    }
}
