@startuml
class Main
class Game
interface Room
abstract class ARoom
class StartRoom
class Player
class InteractiveObject


Main : + static void main (String[] args)


Main *--Game
Game *-- Room
Game *-- TextUI
Game *-- Player
Room <|-- ARoom
ARoom <|-- StartRoom
ARoom *-- InteractiveObject

ARoom *-- TextUI


Game : - List <Room> rooms
Game : - Player player

Game : + void setup()
Game : + void startMenu()
Game : + void runGameLoop()


Room : + void enter()
Room : + void exit()


ARoom : # String Story
ARoom : # List <InteractiveObject> interactiveObjects


StartRoom : - boolean candleLit
StartRoom : - boolean bookshelfPuzzleSolved
StartRoom : - boolean paintingPuzzleSolved

StartRoom : + void enter()
StartRoom : + void exit()
StartRoom : + void runRoomLoop()
StartRoom : - void startBookshelfPuzzle()
StartRoom : - void startPaintingPuzzle()


Player : - String playerName

Player : + String getName()


TextUI : - Scanner scanner

TextUI : + String getInput(String msg)
TextUI : + int getChoice(String msg, List<?> options)
TextUI : + void displayErrorMessage(String errorMsg)
TextUI : + void displayMessage(String msg)
TextUI : + void displayOptions(List<?> options)


InteractiveObject : - String type
InteractiveObject : - String name

@enduml